--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.cdnfonts.com/css/titillium-text" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
     <title>WCH-1</title>
   </head>
