edited css for form markup

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <select name="location" id="location">
                   <option value="new york">new york</option>
                   <option value="longdon">london</option>
-                  <option value="berlin">berlink</option>
+                  <option value="berlin">berlin</option>
                   <option value="warsaw">warsaw</option>
                 </select>
               </div>
