added some markup, modified styles

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
           <div class="form__email">
             <p class="form__header">Send Email</p>
           </div>
+          <form action="" method="POST" class="email">
+            <input class="email__name name" name="name" type="text" placeholder="your name" required>
+            <input class="email__address" type="email" name="email" required>
+          </form>
         </section>
         <section class="column">
           <div class="form__sign">
