--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
       <main class="content">
         <section class="column">
-          <div class="form__register">
+          <div class="form">
             <p class="form__header">Register From</p>
             <form action="" method="POST" class="register">
               <div class="inputs">
@@ -28,16 +28,22 @@
                   <option value="berlin">berlin</option>
                   <option value="warsaw">warsaw</option>
                 </select>
+                <input type="checkbox" name="terms" id="terms">
+                <label for="terms">I have read and accepted terms of the use.</label>
+                <button type="submit">Sign Up</button>
               </div>
             </form>
           </div>
-          <div class="form__email">
+          <div class="form">
             <p class="form__header">Send Email</p>
-          </div>
           <form action="" method="POST" class="email">
-            <input class="email__name name" name="name" type="text" placeholder="your name" required>
-            <input class="email__address" type="email" name="email" required>
+            <input class="email__name name" name="name" type="text" placeholder="your name" required />
+            <input class="email__address" type="email" name="email" required />
+            <textarea class="email__message name="message" cols="30" rows="10" placeholder="your message"></textarea>
+            <input type="checkbox" name="sendme" id="sendme"><label for="sendme">Send a copy to my email</label>
+            <button type="submit">Send Email</button>
           </form>
+        </div>
         </section>
         <section class="column">
           <div class="form__sign">
