--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                   <option value="warsaw">Warsaw</option>
                 </select>
               </div>
-              <label class="checkbox-label" for="terms">
+              <label class="checkbox-label" for="terms">I have read and accepted terms of use.
                 <input class="checkbox" type="checkbox" name="terms" id="terms" />
-                I have read and accepted terms of the use.
+                <!-- <span class="tick"></span> -->
               </label>
               <button type="submit">Sign Up</button>
             </form>
@@ -44,12 +44,12 @@
             <form action="" method="POST" class="email">
               <div class="input"><input class="user" name="name" type="text" placeholder="Your Name" required /></div>
               <div class="input"><input class="email" type="email" name="email" placeholder="Yor email" required /></div>
-              <div class="input">
+              <div class="text">
                 <textarea class="email__message" name="message" cols="30" rows="10" placeholder="Type your message..."></textarea>
               </div>
-              <label class="checkbox-label" for="sendme">
+              <label class="checkbox-label" for="sendme">Send a copy to my email
                 <input class="checkbox" type="checkbox" name="sendme" id="sendme" />
-                Send a copy to my email
+                <!-- <span class="tick"></span> -->
               </label>
               <button type="submit">Send Email</button>
             </form>
@@ -61,9 +61,9 @@
             <form class="sign" action="" method="POST">
               <div class="input"><input class="user" type="text" name="signuser" placeholder="User Name" required /></div>
               <div class="input"><input class="passoword" type="password" name="signpass" placeholder="Password" required /></div>
-              <label class="checkbox-label" for="remember">
+              <label class="checkbox-label float" for="remember">Remember Me
                 <input class="checkbox" type="checkbox" name="remember" id="remember" />
-                Remember Me
+                <!-- <span class="tick"></span> -->
               </label>
               <button type="submit">Sign In</button>
             </form>
