--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               </div>
               <label class="checkbox-label" for="terms">I have read and accepted terms of use.
                 <input class="checkbox" type="checkbox" name="terms" id="terms" />
-                <!-- <span class="tick"></span> -->
+                <span class="tick"></span>
               </label>
               <button type="submit">Sign Up</button>
             </form>
@@ -49,7 +49,7 @@
               </div>
               <label class="checkbox-label" for="sendme">Send a copy to my email
                 <input class="checkbox" type="checkbox" name="sendme" id="sendme" />
-                <!-- <span class="tick"></span> -->
+                <span class="tick"></span>
               </label>
               <button type="submit">Send Email</button>
             </form>
@@ -63,7 +63,7 @@
               <div class="input"><input class="passoword" type="password" name="signpass" placeholder="Password" required /></div>
               <label class="checkbox-label float" for="remember">Remember Me
                 <input class="checkbox" type="checkbox" name="remember" id="remember" />
-                <!-- <span class="tick"></span> -->
+                <span class="tick"></span>
               </label>
               <button type="submit">Sign In</button>
             </form>
