--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <input class="checkbox" type="checkbox" name="terms" id="terms" />
                 <span class="tick"></span>
               </label>
-              <button type="submit">Sign Up</button>
+              <button class="big" type="submit">Sign Up</button>
             </form>
           </div>
           <div class="form">
@@ -51,7 +51,7 @@
                 <input class="checkbox" type="checkbox" name="sendme" id="sendme" />
                 <span class="tick"></span>
               </label>
-              <button type="submit">Send Email</button>
+              <button class="big" type="submit">Send Email</button>
             </form>
           </div>
         </section>
