added styles for invalid inputs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="form">
             <p class="form__header">Register From</p>
             <form action="" method="POST" class="register">
-              <div class="input"><input class="user" type="text" placeholder="Username" name="username" required /></div>
+              <div class="input"><input class="user" type="text" placeholder="Username" name="username" required minlength="4"/></div>
               <div class="input"><input class="passoword" type="password" placeholder="Password" name="password" required minlength="8" /></div>
               <div class="input">
                 <input class="passoword" type="password" placeholder="confirm Password" name="confirm" required minlength="8" />
@@ -59,8 +59,8 @@
           <div class="form">
             <p class="form__header">Sign In Form</p>
             <form class="sign clearfix" action="" method="POST">
-              <div class="input"><input class="user" type="text" name="signuser" placeholder="User Name" required /></div>
-              <div class="input"><input class="passoword" type="password" name="signpass" placeholder="Password" required /></div>
+              <div class="input"><input class="user" type="text" name="signuser" placeholder="User Name" required minlength="4" /></div>
+              <div class="input"><input class="passoword" type="password" name="signpass" placeholder="Password" required minlength="8"/></div>
               <label class="checkbox-label float" for="remember">Remember Me
                 <input class="checkbox" type="checkbox" name="remember" id="remember" />
                 <span class="tick"></span>
